refactor(admin, inspector): 🎨 Improve UI consistency and profile image handling across components

--- a/pages/admin/components/inspections.html
+++ b/pages/admin/components/inspections.html
@@ -59,7 +59,6 @@
    }
    .card {
     border-radius: 10px;
-    box-shadow: 0 1px 2.94px rgba(4, 26, 55, 0.16);
     border: none;
     margin-bottom: 30px;
     transition: all 0.3s ease-in-out;
@@ -129,7 +128,7 @@
  </head>
  <body id="violations">
   <section>
-   <div class="card">
+   <div class="card p-3 rounded-4">
     <div class="card-body">
      <h4>Business Inspections</h4>
      <p>Inspect businesses and create violations for business violators.</p>
