--- a/pages/admin/components/dashboard.html
+++ b/pages/admin/components/dashboard.html
@@ -36,7 +36,6 @@
    .card {
     border: none;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    }
    .order-card {
     color: #fff;
@@ -123,8 +122,8 @@
   />
  </head>
  <body id="dashboard">
-  <div class="card mb-4">
-   <div class="card-body">
+  <div class="card mb-4 p-3 rounded-4">
+   <div class="card-body p-3">
     <h4>Dashboard</h4>
     <p>
      Welcome to the BXU BAS Dashboard. Here you can monitor and manage all
