--- a/pages/admin/components/messages.html
+++ b/pages/admin/components/messages.html
@@ -103,9 +103,9 @@
  </style>
  <body id="notifications">
   <div class="">
-   <div class="card mb-4">
-    <div class="card-body">
-     <div class="d-flex justify-content-between align-items-center">
+   <div class="card rounded-4">
+    <div class="card-body rounded-4">
+     <div class="d-flex justify-content-between align-items-center p-3 rounded-4">
       <div>
        <h4 class="mb-1">Violator Notices</h4>
        <p class="text-muted mb-0">Track all sent violation notices</p>
