--- a/pages/inspector/components/inspections.html
+++ b/pages/inspector/components/inspections.html
@@ -86,12 +86,14 @@
   }
  </style>
  <body>
-  <div class="card">
-   <div class="card-body">
-    <h4>Business Inspection</h4>
-    <p>Inspect business and create violations for business violators</p>
+  <div class="card p-3 rounded-4">
+   <div class="card-body d-flex justify-content-between align-items-center">
+    <div>
+     <h4>Business Inspection</h4>
+     <p>Inspect business and create violations for business violators</p>
+    </div>
     <button
-     class="btn btn-primary"
+     class="btn btn-primary py-2"
      id="openModalBtn"
      data-bs-toggle="modal"
      data-bs-target="#violatorModal"
