--- a/pages/admin/components/inspector.html
+++ b/pages/admin/components/inspector.html
@@ -28,7 +28,7 @@
    }
    .card {
     border-radius: 12px;
-    /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     border: none;
     overflow: hidden;
    }
